deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-recognizer-deployment
  namespace: default
  labels:
    app: image-recognizer-deployment
spec:
  replicas: 4
  minReadySeconds: 60
  selector:
    matchLabels:
      app: image-recognizer-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: image-recognizer-deployment
    spec:
      containers:
      - image: docker.io/jonasberlin/ci-demo:${BUILD_NUMBER}
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command: ["bash", "-c", "sleep 10"]
        name: image-recognizer-deployment
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
